# BaumanEDUcnnFrame

./: CMakeLists.txt  DropoutLayer.h  GeneticAlgorithmOptimizer.h  README.md  SigmoidLayer.h  Trainer.h  Visualizer.h  learnCNN.cpp  main.cpp  playSnake.cpp  snake.hpp  testCNN.cpp
app/: CMakeLists.txt  main.cpp  mnist_app.cpp
demonstration model/: main.cpp  mnist_app.cpp  mnist_app.h  snake.hpp
demonstration model/src/: FlattenLayer.h  Layer.h  Optimizer.h  Tensor.h
edunet/: Conv2DLayer.h  DQNAgent.cpp  DQNAgent.h  DataLoader.h  DenseLayer.h  MaxPooling2DLayer.h  ReLULayer.h
src/: CMakeLists.txt  Loss.h  Sequential.h  SoftmaxLayer.h
